# garrire

./: .dockerignore  .editorconfig  .gitignore  .package  .travis.yml  Cargo.toml  Example.Settings.toml  README.md  cli-config.php  composer.json  env.defaults.sh  env.example.sh  index.php  nginx.conf  package.json  top.nginx.conf
.github/workflows/: deploy.yml
app/: Controller.php  End.php  ReplyTypeMismatch.php  bootstrap.php  index.php
app/Acts/: Act.php  AssignRole.php  CreateMessage.php  RemoveRole.php
app/Controllers/: ApiController.php  Check.php  Controller.php  Membership.php
app/Exceptions/: End.php  ExtCalc.php  ReplyTypeMismatch.php
app/Ext/: Calc.php
app/Models/: ApiEndpoint.php  Badge.php  Command.php  HardCodedPick.php  Model.php  Novel.php  (+18 more)
calc/: Cargo.toml  build.rs
migrations/: U2027801082__commands.sql  U2027901097__current_commands.sql  U2028001032__motivations.sql  U2029401045__colours.sql  U2029402092__months.sql  U2029403061__seasons.sql  U2029501043__flowers.sql  U2029502048__foods.sql  U2029503018__animals.sql  U2029800002__commands_add_w.sql  U2029801076__plots.sql  U2029802046__commands_fix_redirects.sql  U2029803080__commands_add_plot.sql  U2029804059__badges.sql  U2029805016__rename_8ball.sql  U2029806029__commands_add_badge.sql  U2029807000__settings.sql  U2029808014__commands_add_bangbang.sql  U2029901004__commands_add_calc.sql  U2029902052__commands_add_bangbang.sql  U2030501075__fix_prod_bangbang.sql  U2030502070__nanowrimo.sql  U2030503046__novels.sql  U2030504027__commands_add_wordcount.sql  U2031001004__novels_goal.sql  U2031901045__case_insensitive_command_path.sql  U2110101059__pick_gemstones.sql  U2110102035__pick_cards.sql  U2110301004__pick_moods.sql  U2110302019__api_endpoints.sql  U2110303026__api_endpoints_add_plot_random.sql  U2129501026__commands_add_autoplot.sql  U2129502072__plots_storied.sql  U2129503041__plots_triple.sql
prod/: Dockerfile.accord  Dockerfile.php  Dockerfile.router  kdeploy.yml  nginx.conf  php-fpm.conf  php.ini
src/: commands.rs  error.rs  grammar.pest  handler.rs  lang.rs  locale.rs  main.rs  nanowrimo.rs  palindromic.rs  schema.rs  settings.rs  voice.rs
static/: help.txt
words/: .gitignore  Cargo.toml
(+61 files in other folders)
