[package]
name = "garrire"
version = "0.1.0"
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dawn = { git = "https://github.com/dawn-rs/dawn" }
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.4"
