[package]
name = "garrire"
version = "0.1.0"
authors = ["Félix Saparelli <felix@passcod.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dawn-gateway = { git = "https://github.com/dawn-rs/dawn" }
dawn-model = { git = "https://github.com/dawn-rs/dawn" }
dawn-http = { git = "https://github.com/dawn-rs/dawn" }
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.4"
pest = "2.1.2"
pest_derive = "2.1.0"
