[package]
name = "garrīre"
version = "0.1.0"
edition = "2018"

publish = false

authors = ["Félix Saparelli <felix@passcod.name>"]
description = "Sassy discord bot"
homepage = "https://github.com/storily/garrire"
license = "Artistic-2.0"
readme = "README.md"
repository = "https://github.com/storily/garrire"

[badges]
travis-ci = { repository = "storily/garrire", branch = "main" }
maintenance = { status = "actively-developed" }

[profile.release]
lto = true

[features]
default = ["calc-rhai"]
calc-rhai = ["rhai"]

[dependencies]
base64 = "0.12.0"
chrono = "0.4.11"
env_logger = "0.7.1"
error-chain = "0.12.2"
fluent = "0.8.0"
http = "0.2.1"
lalrpop-util = "0.18.1"
log = "0.4.6"
once_cell = "1.3.1"
r2d2 = "0.8.8"
rand = "0.7.3"
regex = "1.3.7"
rhai = { version = "0.12.0", optional = true }
rust-embed = "5.5.1"
serde = "1.0.106"
serde_json = "1.0.51"
typemap = "0.3.3"
unic-langid = "0.6.1"
walkdir = "2.3.1"

[dependencies.config]
version = "0.10.1"
features = ["toml"]

[dependencies.diesel]
version = "1.4.4"
features = ["chrono", "postgres", "r2d2"]

[dependencies.isahc]
version = "0.9.1"
default-features = false
features = ["http2", "json"]

[dependencies.serenity]
version = "0.8.6"
features = ["voice"]
